2004-07-30  Alexandre Oliva  <aoliva@redhat.com>

	Introduce SH2a support.
	2004-03-16  Corinna Vinschen  <vinschen@redhat.com>
	* libc/include/machine/ieeefp.h: Define _DOUBLE_IS_32BITS for
	__SH2A_SINGLE_ONLY__, too.
	* libc/machine/sh/asm.h: Define DELAYED_BRANCHES for __SH2A__, too.
	2004-02-24  Corinna Vinschen  <vinschen@redhat.com>
	* libc/sys/sh/crt0.S (start_l): Support sh2a-nofpu.  Fix comments.
	2004-02-10  DJ Delorie  <dj@redhat.com>
	* libc/sys/sh/crt0.S (start_l): Support sh2a.

2004-07-29  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/time/strptime.c: Correct full-name of "March" typo.

2004-07-16  Anil Paranjpe  <anilp1@kpitcummins.com>

	* configure.host (h8300*-*-*): Default long long printing support. 

2004-07-16  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/fvwrite.c (_sfvwrite):  For asprintf family
	calls, if realloc fails, free up buffer as it is no longer
	used.

2004-07-07  Artem B. Bityuckiy  <dedekind@oktetlabs.ru>

	* libc/iconv/iconv.tex: Updated to represent recent changes.
	* libc/iconv/lib/iconv.c: Documentation updated.

2004-07-07  Nick Clifton  <nickc@redhat.com>

	* configure.host (newlib_cflags): Define PREFER_SIZE_OVER_SPEED
	for xStormy16.

2004-07-06  Chris Demetriou  <cgd@broadcom.com>

	* configure.host (mips*-*-elf*): Default long long printing
	support.

2004-07-05  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/Makefile.am (libc.dvi): Add target and specify
	same dependencies as libc.info.
	* libc/Makefile.in: Regenerated.
	* libm/Makefile.am (libm.dvi): Add target and specify
	same dependencies as libm.info.
	* libm/Makefile.in: Regenerated.

2004-06-29  Artem B. Bityuckiy  <dedekind@oktetlabs.ru>

	* acinclude.m4: Move --enable-newlib-iconv option back here.
	* configure.in: Remove --enable-newlib-iconv option.  Don't
	tie iconv support to --enable-newlib-mb.
	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* doc/aclocal.m4, doc/configure: Ditto.
	* iconvdata/aclocal.m4, iconvdata/configure: Ditto.